# onlineTiny2023

./: README.md  dataset_config.json
documents/: tables.docx  tables.xlsx  ~$tables.docx  ~$tables.xlsx
documents/X-CUBE-AI 8.10 Documentation/: api_break.html  api_platform_observer.html  command_line_interface.html  crc_ip_support.html  dqnn_support.html  embedded_client_api.html  evaluation_metrics.html  faq_generic.html  faq_quantization.html  faq_validation.html  how_to_run_a_model_locally.html  how_to_upgrade_a_project.html  how_to_use_usb_cdc_for_validation.html  index.html  keras_lambda_custom.html  keras_lstm_stateful.html  onnx_ml_support.html  quantization.html  quantization_cmd.html  release_note.html  relocatable.html  setting_env.html  supported_ops_keras.html  supported_ops_onnx.html  supported_ops_tflite.html  tflite_micro_support.html
figures/: fig.pptx  ~$fig.pptx
gap9/: CNN_MatMul_Conv_fp16.c  CNN_SoftMax_fp16.c  FastFloatApprox.h
gap9/gym/: CMakeLists.txt  GenGym  Gym.c  Gym.h  GymKernels.c  GymKernels.h  GymModel.c  GymModelInfos.h  Makefile  nntool_script_gym.py  online_training.c  online_training.h  sdk.config
gap9/qvar/: CMakeLists.txt  GenQvar  Makefile  Qvar.c  Qvar.h  QvarKernels.c  QvarKernels.h  QvarModel.c  QvarModelInfos.h  nntool_script_qvar.py  online_training.c  online_training.h
gap9/ultra/: CMakeLists.txt  GenUltra  Makefile  README.md  Ultra.c  Ultra.h  UltraKernels.c  UltraKernels.h  UltraModel.c  UltraModelInfos.h  nntool_script_ultra.py  online_training.c  online_training.h  test_in_data.txt
gap9/ultra/tensors/: Constant_backbone_identity3_channel_adapt_bias.tensor  Constant_onnx__conv_120.tensor  Constant_onnx__conv_123.tensor  Constant_onnx__conv_126.tensor  Constant_onnx__conv_129.tensor  Constant_onnx__conv_132.tensor  Constant_onnx__conv_135.tensor  Constant_onnx__conv_138.tensor  Constant_onnx__conv_141.tensor  Constant_onnx__conv_144.tensor  Constant_onnx__conv_147.tensor  Constant_onnx__conv_150.tensor  Conv_0_weights.tensor  Conv_11_weights.tensor  Conv_13_weights.tensor  Conv_16_weights.tensor  Conv_18_weights.tensor  Conv_20_weights.tensor  Conv_21_weights.tensor  Conv_2_weights.tensor  Conv_4_weights.tensor  Conv_6_weights.tensor  Conv_9_weights.tensor  Gemm_30_biases.tensor  Gemm_30_weights.tensor  Gemm_31_biases.tensor  Gemm_31_weights.tensor
histories/: rename.py
histories/gym/: fold_10_incnu_partvalid.pkl  fold_10_incu_fullvalid.pkl  fold_10_incu_partvalid.pkl  fold_10_pre_fullvalid.pkl  fold_10_pre_partvalid.pkl  fold_1_incnu_partvalid.pkl  fold_1_incu_fullvalid.pkl  fold_1_incu_partvalid.pkl  fold_1_pre_fullvalid.pkl  fold_1_pre_partvalid.pkl  fold_2_incnu_partvalid.pkl  fold_2_incu_fullvalid.pkl  fold_2_incu_partvalid.pkl  fold_2_pre_fullvalid.pkl  fold_2_pre_partvalid.pkl  fold_3_incnu_partvalid.pkl  fold_3_incu_fullvalid.pkl  fold_3_incu_partvalid.pkl  fold_3_pre_fullvalid.pkl  fold_3_pre_partvalid.pkl  fold_4_incnu_partvalid.pkl  fold_4_incu_fullvalid.pkl  fold_4_incu_partvalid.pkl  fold_4_pre_fullvalid.pkl  fold_4_pre_partvalid.pkl  fold_5_incnu_partvalid.pkl  fold_5_incu_fullvalid.pkl  fold_5_incu_partvalid.pkl  fold_5_pre_fullvalid.pkl  fold_5_pre_partvalid.pkl  fold_6_incnu_partvalid.pkl  fold_6_incu_fullvalid.pkl  fold_6_incu_partvalid.pkl  fold_6_pre_fullvalid.pkl  fold_6_pre_partvalid.pkl  fold_7_incnu_partvalid.pkl  fold_7_incu_fullvalid.pkl  fold_7_incu_partvalid.pkl  fold_7_pre_fullvalid.pkl  fold_7_pre_partvalid.pkl  (+10 more)
histories/qvar/: fold_10_incnu_partvalid.pkl  fold_10_incu_fullvalid.pkl  fold_10_incu_partvalid.pkl  fold_10_pre_fullvalid.pkl  fold_10_pre_partvalid.pkl  fold_11_incnu_partvalid.pkl  fold_11_incu_fullvalid.pkl  fold_11_incu_partvalid.pkl  fold_11_pre_fullvalid.pkl  fold_11_pre_partvalid.pkl  fold_12_incnu_partvalid.pkl  fold_12_incu_fullvalid.pkl  fold_12_incu_partvalid.pkl  fold_12_pre_fullvalid.pkl  fold_12_pre_partvalid.pkl  (+85 more)
pc2mcu_uart/: uart2mcu_gym.py  uart2mcu_qvar.py  uart2mcu_ultra.py
pytorch/: dataman_gym.py  dataman_qvar.py  dataman_ultra.py  early_stopping.py  inc_training_resnet_gym.py  inc_training_resnet_qvar.py  inc_training_resnet_ultra.py  model_definitions.py  print_weights.py  quantize_ultra.py  test_onnx_model.py  test_pt_model.py  tsne_gym.py  tsne_qvar.py  tsne_ultra.py
(+855 files in other folders)
